src/styles/components/skills.css
.skills {
    position: relative;
    width: 100%;
    margin: 40px 0;
    padding: 40px 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.skills-header {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    margin: 40px 0;
}

.skills-header::before,
.skills-header::after {
    content: '';
    height: 2px;
    width: 96px;
    background: var(--primary);
    opacity: 0.3;
    margin-bottom: 10px;
}

.skills-header h3 {
    padding: 8px 20px;
    border-radius: 12px;
    font-size: 1.5rem;
}

.skill-item {
    width: 160px;
    height: 140px;
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 12px;
    border: 2px solid rgba(124, 58, 237, 0.2);
    border-radius: 8px;
    transition: all 0.3s ease;
    flex-shrink: 0;
}

.skill-item img {
    width: 60px;
    height: 60px;
    object-fit: contain;
    transition: all 0.3s ease;
}

.skill-item span {
    font-size: 1rem;
    color: var(--accent);
    white-space: nowrap;
    text-align: center;
}

.skill-item:hover {
    transform: scale(1.15);
    border-color: var(--primary);
    box-shadow: 0 4px 15px rgba(124, 58, 237, 0.2);
    position: relative;
    z-index: 2;
}


@media (max-width: 768px) {
    .skill-item {
        padding: 10px 0;
    }

    .skill-item {
        width: 120px;
        height: 120px;
        padding: 16px;
    }

    .skill-item img {
        width: 40px;
        height: 40px;
    }

    .skill-item span {
        font-size: 0.9rem;
    }
}

.scroller {
    max-width: 1100px;
}

.scroller__inner {
    padding-block: 1rem;
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
  }

.scroller[data-animated="true"] {
    overflow: hidden;
    -webkit-mask: linear-gradient(
        90deg,
        transparent,
        white 20%,
        white 80%,
        transparent
    );
    mask: linear-gradient(
        90deg,
        transparent,
        white 20%,
        white 80%,
        transparent
    );
}

.scroller[data-animated="true"] .scroller__inner {
    width: max-content;
    animation: scroll var(--_animation-duration, 40s) var(--_animation-direction, forwards) linear infinite;
}

.scroller[data-animated="true"]:hover .scroller__inner {
    animation-play-state: paused;
}

.scroller[data-direction="right"] {
    --_animation-direction: reverse;
}

.scroller[data-direction="left"] {
    --_animation-direction: forwards;
}

.scroller[data-speed="fast"] {
    --_animation-duration: 20s;
}

.scroller[data-speed="medium"] {
    --_animation-duration: 40s;
}

.scroller[data-speed="slow"] {
    --_animation-duration: 60s;
}

